--- a/tailstrap/package.json
+++ b/tailstrap/package.json
@@ -13,6 +13,7 @@
     "@popperjs/core": "^2.11.8",
     "@tailwindcss/vite": "^4.0.12",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.12"
