--- a/rioty/package.json
+++ b/rioty/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hono/node-server": "^1.13.8",
     "@popperjs/core": "^2.11.8",
     "@tailwindcss/vite": "^4.0.12",
+    "better-sqlite3": "^11.9.1",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.7",
+    "hono": "^4.7.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sqlite3": "^5.1.7",
     "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
